k8s/shimo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    #app.openshift.io/vcs-ref: f7580aa1eb6f7176705176e201ecff4de93edafb
    #app.openshift.io/vcs-uri: https://github.com/cloud-native-garage-method-japan-cohort/tokinori_shimodaira_ibm-sample-app.git
  labels:
    app: tokinori-shimodaira-mvp
    app.kubernetes.io/instance: tokinori-shimodaira-mvp
    app.kubernetes.io/name: tokinori-shimodaira-mvp
    app.openshift.io/runtime: js
  name: tokinori-shimodaira-mvp
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: tokinori-shimodaira-mvp
      app.kubernetes.io/name: tokinori-shimodaira-mvp
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: tokinori-shimodaira-mvp
        app.kubernetes.io/name: tokinori-shimodaira-mvp
    spec:
      containers:
        - env:
          - name: SPEECH_TO_TEXT_AUTH_TYPE
            valueFrom:
              secretKeyRef:
                name: watson-api-key-tokinori-shimodaira-mvp-password
                key: SPEECH_TO_TEXT_AUTH_TYPE
          - name: SPEECH_TO_TEXT_APIKEY
            valueFrom:
              secretKeyRef:
                name: watson-api-key-tokinori-shimodaira-mvp-password
                key: SPEECH_TO_TEXT_APIKEY
          - name: SPEECH_TO_TEXT_URL
            valueFrom:
              secretKeyRef:
                name: watson-api-key-tokinori-shimodaira-mvp-password
                key: SPEECH_TO_TEXT_URL
          - name: INGRESS_HOST
          - name: PROTOCOLS
          - name: LOG_LEVEL
            value: debug
          image: quay.io/tokinori_shimodaira_ibm/tokinori-shimodaira-mvp:latest
          imagePullPolicy: Always
          # imagePullPolicy: IfNotPresent　
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: tokinori-shimodaira-mvp
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
