k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: watson-speech-to-text-backend
  labels:
    app: watson-speech-to-text-backend
spec:
  type: NodePort
  selector:
    app: watson-speech-to-text-backend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http-listener
